# hyper_development

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json
.cursor/agents/: INDEX.md  ai-agents.md  analytics.md  architect.md  business-analyst.md  coder.md  content.md  data.md  dev.md  devops.md  marketing.md  orchestrator.md  product.md  qa.md  research.md  review.md  security.md  sre.md  ui.md  ux.md
.cursor/rules/: 00-agentic-system-core.mdc  01-agent-routing-and-formats.mdc  03-ssh-operations.mdc
.cursor/skills/: INDEX.md
.github/workflows/: ci.yaml  (+2 more)
api/: Dockerfile  README.md  package.json  server.js
backend/: .env.example  Dockerfile  README.md  manage.py  pyproject.toml  requirements.txt
backend/admin_custom/: apps.py
backend/config/: urls.py  views.py
backend/config/settings/: base.py  production.py  test.py
backend/core/: admin.py  models.py
backend/partners/: apps.py
backend/referral/: apps.py
backend/users/: admin.py  models.py  services.py  telegram_auth.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
backend/users/tests/: test_telegram_auth.py  test_views.py
context/: implementation-plan-universal-backend.md  project-brief.yaml
deploy/: .env.production.example  README.md  complete-nginx-and-ssl.sh  fix-nginx-broken-symlink.sh  nginx-hyper-development.ru.conf
docs/: README.md  deployment.md
frontend/: .dockerignore  .env.example  Dockerfile  IMPROVEMENTS.md  PHOTO_ADDED.md  PORTFOLIO_PROJECTS_ADDED.md  README.md  index.html  package-lock.json  package.json
(+122 files in other folders)
